syntax = "proto3";

option java_multiple_files = true;
option java_package = "network.beneath.gateway";
option java_outer_classname = "GatewayProto";

package proto;

service Gateway {
  rpc WriteRecords(WriteRecordsRequest) returns (WriteRecordResponse) {}
}

message WriteRecordResponse {
}

message WriteRecordsRequest {
  bytes instance_id = 1;
  repeated Record records = 2;
}

message Record {
  bytes sequence_number = 2;
  bytes avro_data = 3;
}
